<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/headerBar"
            style="@style/headerBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:elevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/placeholder_view"
                    style="@style/headerBar"
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/placeholder_view"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/cd_logo_image"
                    android:src="@drawable/logo_horizontal" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/headerBar"
            android:orientation="vertical"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.camera.view.PreviewView
                    android:id="@+id/camera_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/layout_camera_disabled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/cd_camera_image"
                        android:src="@mipmap/icon_nocamera" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/pairing_camera_permission_rationale"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/button_camera_enable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/roundable_button_white"
                        android:padding="10dp"
                        android:text="@string/enable_button_text"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorBlackTransparent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/pairing_title"
                    app:autoSizeMaxTextSize="26sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/pairing_subtitle"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform" />

                <EditText
                    android:id="@+id/pairing_key_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/colorBlackTransparentDark"
                    android:gravity="center"
                    android:hint="@string/pairing_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/button_pair"
                    style="@style/roundable_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:enabled="false"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/pairing_button"
                    android:textAllCaps="false"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include
        android:id="@+id/layout_verifying"
        layout="@layout/layout_verifying"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_success"
        layout="@layout/layout_success"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_invalid"
        layout="@layout/layout_invalid"
        android:visibility="gone" />
</FrameLayout>